新增tk-mybatis代码生成

--- a/spring-boot-00-generator/src/main/resources/template/mybatis-plus/Entity.java.vm
+++ b/spring-boot-00-generator/src/main/resources/template/mybatis-plus/Entity.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.entity;
+package ${package}.${moduleName}.domain;
 
 import com.baomidou.mybatisplus.annotation.TableField;
 import com.baomidou.mybatisplus.annotation.TableId;
@@ -25,7 +25,7 @@ import lombok.NoArgsConstructor;
 @AllArgsConstructor
 @Builder(toBuilder = true)
 @TableName("${tableName}")
-public class ${className}Entity implements Serializable {
+public class ${className} implements Serializable {
 
 	private static final long serialVersionUID = 1L;
 
