--- a/spring-boot-00-generator/src/main/resources/template/mybatis-plus/Mapper.java.vm
+++ b/spring-boot-00-generator/src/main/resources/template/mybatis-plus/Mapper.java.vm
@@ -1,7 +1,7 @@
 package ${package}.${moduleName}.mapper;
 
-import ${package}.${moduleName}.domain.${className}Entity;
 import com.baomidou.mybatisplus.core.mapper.BaseMapper;
+import ${package}.${moduleName}.domain.${className};
 import org.apache.ibatis.annotations.Mapper;
 
 /**
@@ -12,6 +12,6 @@ import org.apache.ibatis.annotations.Mapper;
  * @date ${datetime}
  */
 @Mapper
-public interface ${className}Mapper extends BaseMapper<${className}Entity> {
+public interface ${className}Mapper extends BaseMapper<${className}> {
 	
 }
