--- a/spring-boot-00-generator/src/main/resources/template/mybatis-plus/Mapper.xml.vm
+++ b/spring-boot-00-generator/src/main/resources/template/mybatis-plus/Mapper.xml.vm
@@ -4,11 +4,10 @@
 <mapper namespace="${package}.${moduleName}.mapper.${className}Mapper">
 
 	<!-- 可根据自己的需求，是否要使用 -->
-    <resultMap type="${package}.${moduleName}.domain.${className}Entity" id="${classname}Map">
+    <resultMap type="${package}.${moduleName}.domain.${className}" id="${classname}Map">
 #foreach($column in $columns)
         <result property="${column.attrname}" column="${column.columnName}"/>
 #end
     </resultMap>
-
 
 </mapper>
