--- a/spring-boot-00-generator/src/main/resources/template/tk-mybatis/Mapper.xml.vm
+++ b/spring-boot-00-generator/src/main/resources/template/tk-mybatis/Mapper.xml.vm
@@ -4,7 +4,7 @@
 <mapper namespace="${package}.${moduleName}.mapper.${className}Mapper">
 
 	<!-- 可根据自己的需求，是否要使用 -->
-    <resultMap id="BaseResultMap" type="${package}.${moduleName}.domain.${className}">
+    <resultMap type="${package}.${moduleName}.domain.${className}" id="${classname}Map">
 #foreach($column in $columns)
         <result property="${column.attrname}" column="${column.columnName}"/>
 #end
